[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
itertools = "0.10.5"
indoc = "1.0.7"
debugless-unwrap = "0.0.4"
array_tool = "1.0.3"
regex = "1.7.0"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
